# agentverse-devopssre

./: .dockerignore  .env.example  .env.template  .gitignore  Makefile  README.org  SECURITY.md  cleanup-agentverse.sh  cloudbuild-cache-warmup.yaml  cloudbuild.yaml  deploy-guardian.sh  main.py  pyproject.toml  set_env.sh  setup_keys.sh  test-guardian-api.sh  test-guardian-local.py  warmup.sh
guardian/: .env.example  Dockerfile  a2a_server.py  agent.py  agent_executor.py  requirements.txt  test_agent.py
modelarmor/: README.md  __init__.py  armor.py  middleware.py  setup-iam.sh  setup-modelarmor.sh  test_armor.py
network/: create-service-extension.sh  setup-load-balancer.sh
observability/: add_sidecar.py  config.yaml
observerability/: add_sidecar.py  config.yaml
ollama/: Dockerfile  README.md  cloudbuild-ollama-deploy.yaml  deploy-ollama-baked.sh  docker-compose.yml
vllm/: cloudbuild-vllm-deploy.yaml  set_hf_token.sh  setup-vllm.sh
